force-app/main/default/objects/Collection_Item__c/Collection_Item__c.object-meta.xml
<CustomObject>
    <label>Collection Item</label>
    <nameField>
        <displayFormat>Collection Item - {00000}</displayFormat>
        <label>Collection Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>