force-app/main/default/objects/Collection_Item__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection</label>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Collection Items</relationshipLabel>
    <relationshipName>Collection_Items</relationshipName>
    <type>Lookup</type>
</CustomField>