force-app/main/default/objects/Collection_Item__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>IF(
NOT(ISBLANK( Collection__r.Customer__r.SAP_Customer_Code__c )),
 Collection__r.Customer__r.SAP_Customer_Code__c ,
IF(
NOT(ISBLANK(Collection__r.Customer__r.Outlet_Id__c )),  
Collection__r.Customer__r.Outlet_Id__c ,
Collection__r.Customer__r.Customer_Code__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>