force-app/main/default/objects/Collection_Item__c/fields/Visit_For__c.field-meta.xml
<CustomField>
    <fullName>Visit_For__c</fullName>
    <formula>TEXT(Collection__r.Visit_For__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit For</label>
    <type>Text</type>
</CustomField>